k8s/03-jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user1-jenkins
  namespace: user1-jenkins
  labels:
    app: jenkins
    owner: user1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
      owner: user1
  template:
    metadata:
      labels:
        app: jenkins
        owner: user1
    spec:
      containers:
        - name: jenkins
          image: hklee2748/jenkins:k8s-1.28.15-docker-v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: agent
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: docker-sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: user1-jenkins-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: user1-jenkins
spec:
  type: LoadBalancer
  selector:
    app: jenkins
    owner: user1
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
