k8s/04-petclinic-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: user1-was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
      owner: user1
  template:
    metadata:
      labels:
        app: petclinic
        owner: user1
    spec:
      containers:
        - name: petclinic
          image: kwangil1818/petclinic:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: user1-was
spec:
  type: LoadBalancer
  selector:
    app: petclinic
    owner: user1
  ports:
    - port: 8080
      targetPort: 8080
